changed to event structure